local service runs

--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -5,31 +5,31 @@
 
   <ul id="sidebar_ul">
     <li id="home">
-      <%= link_to icon('home fa-fw') + " Home", root_path  %>
+      <%= link_to fa_icon('home fa-fw') + " Home", root_path  %>
     </li>
     <li id="initiatives" >
-      <%= link_to icon('lightbulb-o fa-fw') + " Initiatives", initiatives_path  %>
+      <%= link_to fa_icon('lightbulb-o fa-fw') + " Initiatives", initiatives_path  %>
     </li>
     <li id="leaders">
-      <%= link_to icon('gavel fa-fw') + " Board", leaders_path %>
+      <%= link_to fa_icon('gavel fa-fw') + " Board", leaders_path %>
     </li>
     <li id="join" >
-      <%= link_to icon('group fa-fw') + " Join Us", join_path %>
+      <%= link_to fa_icon('group fa-fw') + " Join Us", join_path %>
     </li>
     <li id="support" >
-      <%= link_to icon('heart-o fa-fw') + " Support", support_path %>
+      <%= link_to fa_icon('heart-o fa-fw') + " Support", support_path %>
     </li>
     <li id="sponsor_child">
-      <%= link_to icon('child fa-fw') + " Children", sponsor_child_path %>
+      <%= link_to fa_icon('child fa-fw') + " Children", sponsor_child_path %>
     </li>
 <!-- <li id="sponsor_pastor">
-      link_to icon('graduation-cap fa-fw') + " Pastors", sponsor_pastor_path
+      link_to fa_icon('graduation-cap fa-fw') + " Pastors", sponsor_pastor_path
     </li> -->
     <li id="blog" >
-      <%= link_to icon('list-alt fa-fw') + " Blog", blog_path %>
+      <%= link_to fa_icon('list-alt fa-fw') + " Blog", blog_path %>
     </li>
     <li id="social" >
-      <%= link_to icon('share-alt fa-fw') + " Social", social_path %>
+      <%= link_to fa_icon('share-alt fa-fw') + " Social", social_path %>
     </li>
   </ul>
 </div>
