--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,8 +33,8 @@
   <footer class="footer">
     <div class="container-fluid">
       <p>
-        <%= icon('copyright') %>
-        2014 LOCODI
+        <%= fa_icon('copyright') %>
+        2015 LOCODI
         <span id="created_by">
           | Created by <%= link_to "Chiperific", "http://chiperific.com", target: :blank %>
         </span>
