--- a/app/views/pages/join.html.erb
+++ b/app/views/pages/join.html.erb
@@ -9,7 +9,7 @@
 <div class="content-block">
   <div class="col-xs-12 col-sm-6">
     <div class="well styled-links">
-      <%= icon('plane fa-4x') %>
+      <%= fa_icon('plane fa-4x') %>
       <h4>Take a Vision Trip</h4>
       <p class="align-left">
         Come visit us for a vision trip that is tailored to help you learn, see, feel and love what the Lord is doing in Uganda!
@@ -26,7 +26,7 @@
 
   <div class="col-xs-12 col-sm-6">
     <div class="well unstyled-links">
-      <%= link_to "#{icon('child fa-4x')}".html_safe, sponsor_child_path %>
+      <%= link_to "#{fa_icon('child fa-4x')}".html_safe, sponsor_child_path %>
       <%= link_to "<h4>Sponsor a Child</h4>".html_safe, sponsor_child_path %>
       <p class="align-left">
         Through the work we do, we meet many children in need of sponsors. We equip generous and compassionate sponsors to directly provide for children that are living on the streets, orphans because of the HIV/AIDS epidemic, and trapped in poverty.
@@ -64,7 +64,7 @@
 
   <div class="col-xs-12 col-sm-6">
     <div class="well styled-links">
-      <%= icon('group fa-4x') %>
+      <%= fa_icon('group fa-4x') %>
       <h4>Volunteer with Locodi</h4>
       <p class="align-left">
         There are many areas where your skills and talents can be put to the work of God’s Kingdom, both in the United States and Uganda.
