--- a/app/views/pages/missionaries.html.erb
+++ b/app/views/pages/missionaries.html.erb
@@ -5,7 +5,7 @@
 <% if @chooser == 1 %>
   <div class="row">
     <div class="col-xs-12">
-      <%= link_to icon('location-arrow fa-fw') + "All Missionaries", missionaries_path, class: "btn btn-default float-right"  %>
+      <%= link_to fa_icon('location-arrow fa-fw') + "All Missionaries", missionaries_path, class: "btn btn-default float-right"  %>
     </div>
   </div>
   <div class="content-block row spacing">
