--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,7 +11,7 @@
 <div class="row">
   <div class="col-xs-12">
     <div class="centered-mega-button-div">
-      <%= link_to icon('heart fa-fw') + " Donate", support_path, class: "btn btn-default align-center mega-button" %>
+      <%= link_to fa_icon('heart fa-fw') + " Donate", support_path, class: "btn btn-default align-center mega-button" %>
     </div>
   </div>
 </div>
